@startuml
skinparam packageStyle rectangle

package ui {
    class ConvertView
    class HistoricalTrendView
}

package interface_adapter {
    class RecentCurrencyController
    class RecentCurrencyPresenter
    class RecentCurrencyViewModel
}

package "use_case.recent_currency" {
    interface RecentCurrencyInputBoundary
    interface RecentCurrencyOutputBoundary
    interface RecentCurrencyDataAccessInterface

    class RecentCurrencyInteractor
    class RecentCurrencyInputData
    class RecentCurrencyOutputData
}

package data_access {
    class FileUserDataAccessObject
}

' ---- UI 层依赖 Adapter 层 ----
ConvertView --> RecentCurrencyController
ConvertView --> RecentCurrencyViewModel
HistoricalTrendView --> RecentCurrencyController
HistoricalTrendView --> RecentCurrencyViewModel

' ---- Controller -> Use Case ----
RecentCurrencyController --> RecentCurrencyInputBoundary

' ---- Interactor 依赖 DAO 和 Presenter ----
RecentCurrencyInteractor ..|> RecentCurrencyInputBoundary
RecentCurrencyInteractor --> RecentCurrencyDataAccessInterface
RecentCurrencyInteractor --> RecentCurrencyOutputBoundary
RecentCurrencyInteractor --> RecentCurrencyInputData

' ---- Presenter -> ViewModel ----
RecentCurrencyPresenter ..|> RecentCurrencyOutputBoundary
RecentCurrencyPresenter --> RecentCurrencyViewModel
RecentCurrencyOutputBoundary --> RecentCurrencyOutputData

' ---- DAO 实现 Use Case 的 DataAccessInterface ----
FileUserDataAccessObject ..|> RecentCurrencyDataAccessInterface
@enduml
